# lunch-menu

./: .Api.py.swp  .gitignore  5_Api.py  Api.py  App.py  README.md  Untitled.ipynb  Untitled1.ipynb  crud.ipynb  endpoints.ipynb  endpoints.json  env.dummy  kwargs.ipynb  lunch_menu.csv  pyproject.toml
.devcontainer/: devcontainer.json
note/: menu.csv
pages/: 1_Input.py  2_data.py  3_statistics.py  4_chart.py  5_insert.py  6_Api.py  7_Sync.py  9_old.py
src/lunch_menu/: constants.py  db.py
